<resources>
    <string name="app_name">Food Planner</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="splachText">Let us help you discover the best food</string>
    <string name="WelcomeBack">Welcome Back</string>
    <string name="login">LogIn</string>
    <string name="google">Google</string>
    <string name="haventAccount">don\'t have account ?</string>
    <string name="createAccount">Creating Account</string>
    <string name="signUP">SignUP</string>
    <string name="haveAccount">already have account?</string>
    <string name="splach1">Need help with choosing your delicious meal?!</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="splach2">Know the ingredients of the meal and how  to do it with us</string>
    <string name="splach3">Do your own plane for a week and add your favourite meals in one place</string>
    <string name="dailyinspiration">Daily Inspiration</string>
    <string name="meals">Meals</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="cat">Categories</string>
    <string name="guest">"You Cann't see favourite meals as your are guest TO see them please </string>
    <string name="planeGuest">You cann\'t see plan meals as you are guest TO see them please</string>
    <string name="profileGuest">You cann\'t have a profile as you are guest TO have one please</string>

</resources>