<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkBlue"
    android:backgroundTint="@color/darkBlue"
    tools:context=".view.fragment.Splach1Fragment">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginTop="-10dp"
        android:src="@drawable/splash11" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="317dp"
        android:layout_height="83dp"
        android:text="@string/splach1"
        android:textColor="#EDEAEA"
        android:textSize="24sp"
        android:gravity="center"
        android:layout_marginStart="50dp"
        android:layout_marginTop="400dp"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/spalsh1Nextbtn"
        android:layout_width="236dp"
        android:layout_height="67dp"
        android:layout_gravity="center"
        android:layout_marginTop="200dp"
        android:backgroundTint="@color/blue"
        android:text="@string/next"
        app:cornerRadius="50dp"
        android:textSize="30dp"
        android:textStyle="bold|italic"
        />
    <TextView
        android:id="@+id/spalsh1SkipTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="30dp"
        android:textColor="@color/white"
        android:text="@string/skip"
        android:layout_gravity="center"
        android:layout_marginTop="280dp"

        android:textStyle="bold|italic"/>


    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:layout_marginTop="140dp"
        android:src="@drawable/group_splach1" />


</FrameLayout>



