<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.LoginFragment">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="461dp"
        android:layout_height="396dp"
        android:src="@drawable/jdlkfj"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:backgroundTint="#0099FF"
        android:drawableLeft="@drawable/google_logo"
        android:textSize="30sp"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/logInserName"
        android:layout_width="341dp"
        android:layout_height="72dp"
        android:background="@drawable/edit_text_style"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="30dp"
        android:ems="10"
        android:hint="User Name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:circularflow_radiusInDP="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.409" />

    <EditText
        android:id="@+id/logInPassword"
        android:layout_width="341dp"
        android:layout_height="72dp"
        android:background="@drawable/edit_text_style"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="30dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:circularflow_radiusInDP="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.575" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/WelcomeBack"
        android:textColor="#E1D9D9"
        android:textSize="40dp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.17"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="@string/login"
        android:textSize="48sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.453"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/logInbtn"
        android:layout_width="219dp"
        android:layout_height="64dp"
        android:layout_marginBottom="184dp"
        android:backgroundTint="#0099FF"
        android:text="@string/login"
        android:textSize="30sp"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/logInGooglebtn"
        android:layout_width="224dp"
        android:layout_height="67dp"
        android:layout_marginBottom="96dp"
        android:backgroundTint="#0099FF"
        android:drawableLeft="@drawable/google_logo"
        android:text="@string/google"
        android:textSize="30sp"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/logInbtn"
        app:layout_constraintStart_toStartOf="@+id/logInbtn" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:text="@string/haventAccount"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.133"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/signUpRedirect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:text="SignUp"
        android:textColor="@color/lightBlue"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

</androidx.constraintlayout.widget.ConstraintLayout>